--- a/.lintstagedrc
+++ b/.lintstagedrc
@@ -1,6 +1,6 @@
 {
     "{src,modules}/**/*.{js,ts,jsx,tsx,json,html,css,scss}": [
-        "nx affected:lint --fix true --base=lesson-4 --head=HEAD",
+        "nx affected:lint --base=lesson-4 --head=HEAD",
         "nx affected:test --base=lesson-4 --head=HEAD",
         "nx format:write --uncommitted"
     ]
