--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -15,6 +15,7 @@
     "skipDefaultLibCheck": true,
     "baseUrl": ".",
     "paths": {
+      "@ecommerce-mentoria-angular/home": ["modules/feature/home/src/index.ts"],
       "@ecommerce-mentoria-angular/layout": [
         "modules/feature/layout/src/index.ts"
       ],
